@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2010,v 1.421 2010/01/29 21:54:17 minskim Exp $
+$NetBSD: CHANGES-2010,v 1.422 2010/01/30 00:26:09 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2010:
 
@@ -512,3 +512,7 @@ Changes to the packages collection and infrastructure in 2010:
 	Updated print/teTeX3-texmf to 3.0nb22 [minskim 2010-01-29]
 	Updated print/teTeX3-bin to 3.0nb40 [minskim 2010-01-29]
 	Removed print/tex-bin-tex successor print/tex-tex [minskim 2010-01-29]
+	Updated fonts/tex-bin-metafont to 2008.12778nb2 [minskim 2010-01-30]
+	Updated print/teTeX3-bin to 3.0nb41 [minskim 2010-01-30]
+	Updated print/tex-bin-latex to 2008.12778nb4 [minskim 2010-01-30]
+	Updated print/tex-pdftex to 1.40.9.12898nb2 [minskim 2010-01-30]
